# deorbiting

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: design-decisions.md
assets/ephemeris/: manifest.json
docs/: ARCHITECTURE.md  CHECKLIST.md  DEFLECTION_METHODS.md  EPHEMERIS.md  EPHEMERIS_TABLES.md  PHYSICS.md  ROADMAP.md  TESTING.md  UI.md  UI_GUIDELINES.md  VISUAL_DISTORTION.md
examples/: analyze_planet_positions.rs  benchmark_gravity.rs  benchmark_prediction.rs  check_icons.rs  collision_analysis.rs  collision_debug.rs  coord_debug.rs  debug_deflection_effectiveness.rs  debug_flight_time.rs  design_jupiter_slingshot.rs  orbit_alignment_analysis.rs  test_asteroid_orbit.rs  test_challenge_countermeasures.rs  test_continuous_deflection.rs  test_earth_intercept.rs  test_gravity_tractor.rs  test_interceptor_collision_cap.rs  test_ion_beam_deflection.rs  test_long_extrapolation.rs  test_scenarios.rs  test_time_sync.rs  test_trajectory_prediction.rs
scripts/: export_horizons_ephemeris.py
src/: asteroid.rs  camera.rs  collision.rs  distortion.rs  input.rs  lambert.rs  lib.rs  main.rs  outcome.rs  prediction.rs  test_utils.rs  time.rs  types.rs
src/continuous/: mod.rs  payload.rs  thrust.rs
src/ephemeris/: data.rs  embedded_tables.rs  horizons_tables.rs  kepler.rs  mod.rs  proptest_ephemeris.rs  table.rs
tests/: asteroid_orbit.rs  bevy_headless.rs  continuous_deflection.rs  earth_intercept.rs  gravity_tractor.rs  interceptor_collision_cap.rs  ion_beam_deflection.rs  long_extrapolation.rs  physics_integration.rs  prediction_integration.rs  render_geometry.rs  scenario_integration.rs  scenarios.rs  time_sync.rs  trajectory_prediction.rs  ui_logic.rs
(+37 files in other folders)
