[package]
name = "deorbiting"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39"
egui-phosphor = { version = "0.11", features = ["regular", "fill"] }
thiserror = "2"
wide = "1.1"

[dev-dependencies]
approx = "0.5"
proptest = "1.9"
particular = { version = "0.7", features = ["parallel"] }
rayon = "1.11"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
